added contact page no adapt

--- a/website_zoopa/index.html
+++ b/website_zoopa/index.html
@@ -132,7 +132,7 @@
                         at your earliest convenience, and we'll be delighted to provide you with all the details you
                         need.
                     </p>
-                    <div class="footer__button">Let’s Talk</div>
+                    <div class="footer__button"><a href="contacts.html">Let’s Talk</a></div>
 
                 </div>
                 <div class="footer__stroke">
